--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: moergo-sc/zmk
-          ref: main
+          ref: ac78a5e961cb5de898d7f5836af3c4132ffd6a5e
           path: src
       - uses: cachix/install-nix-action@v25
         with:
